--- a/main.html
+++ b/main.html
@@ -4,11 +4,49 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Signup Form Car</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>Signup Form Car</h1>
+	<form method="post">
+		<label for="name">Name : </label>
+		<input type="text" id="name" placeholder="Name" required>
+		<br><br>
+		<label for="email">Email : </label>
+		<input type="text" id="email" placeholder="Email" required>
+		<br><br>
+		<label for="gender">Gender :</label>
+		<input type="radio" id="gender_m" name="gender"  required>
+		<label for="gender_m">Male </label>
+		<input type="radio" id="gender_f" name="gender"  required>
+		<label for="gender_f">Female </label>
+		<br><br>
+		<label for="car">Car Brands : </label>
+		<select id="car" required>
+			<option>--Please choose an option--</option>
+			<option>BC</option>
+			<option>AB</option>
+			<option>AC</option>
+		</select><br><br>
+		<label for="age">Age : </label>
+		<input type="number" id="age" placeholder="Age" required>
+		<br><br>
+		<label for="dob">DOB : </label>
+		<input type="date" id="dob" required>
+		<br><br>
+		<label for="tel">Phone Number : </label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
+		<br><br>
+		<label for="password">Password : </label>
+		<input type="password" id="password" placeholder="Password" required>
+		<br><br>
+		<input type="checkbox" id="tos" required>
+		<label for="tos">I agree to the TOS </label>
+		<br><br>
+		<button type="submit">Submit</button>
+	</form>
+<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
