--- a/main.html
+++ b/main.html
@@ -22,8 +22,8 @@
 		<input type="radio" id="gender_f" name="gender"  required>
 		<label for="gender_f">Female </label>
 		<br><br>
-		<label for="car">Car Brands : </label>
-		<select id="car" required>
+		<label for="cars">Car Brands : </label>
+		<select id="cars" required>
 			<option>--Please choose an option--</option>
 			<option>BC</option>
 			<option>AB</option>
